[package]
name = "rust_bridge"
version = "0.1.0"
authors = ["woodser <woodser@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
path = "src/atomic_swap_rust_bridge.rs"

[dependencies]
rand = "0.7"
cross-curve-dleq = { git = "https://github.com/woodser/cross-curve-dleq", rev = "eddcdea1d1f16fa33ef581d1744014ece535c920"}